kubernetes/logging-fluentd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logging-fluentd
  namespace: backend
  labels:
    app: logging-fluentd
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: logging-fluentd
    spec:
      containers:
        - name: logging-fluentd
          image: demo-nestjs/logging-fluentd:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
          resources: {}
      restartPolicy: Always
  selector:
    matchLabels:
      app: logging-fluentd
