kubernetes/logging-fluentd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logging-fluentd
  namespace: backend
spec:
  selector:
    app: logging-fluentd
  ports:
    - name: api
      port: 3002
      targetPort: 3002
